<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dortegau</groupId>
    <artifactId>jq4java-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jq4java</name>
    <description>A Java 8 port of jq, the lightweight and flexible command-line JSON processor</description>
    <url>https://github.com/dortegau/jq4java</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>dortegau</id>
            <name>Daniel Ortega</name>
            <url>https://github.com/dortegau</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/dortegau/jq4java.git</connection>
        <developerConnection>scm:git:ssh://github.com:dortegau/jq4java.git</developerConnection>
        <url>https://github.com/dortegau/jq4java/tree/main</url>
    </scm>

    <modules>
        <module>jq4java-core</module>
        <module>jq4java-cli</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
